--- a/Spedizioni/Spedizioni/Spedizioni.csproj
+++ b/Spedizioni/Spedizioni/Spedizioni.csproj
@@ -189,6 +189,8 @@
     <Content Include="Views\Spedizioni\SpedizioniPerCitta.cshtml" />
     <Content Include="Views\Spedizioni\InserisciSpedizione.cshtml" />
     <Content Include="Views\Home\Tracking.cshtml" />
+    <Content Include="Views\Spedizioni\Index.cshtml" />
+    <Content Include="Views\Spedizioni\VisualizzaSpedizioni.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
